Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8029569/VarargsAmbiguityCrashTest.out
VarargsAmbiguityCrashTest.java:11:9: compiler.err.ref.ambiguous: m2, kindname.method, m2(java.lang.Exception...), VarargsAmbiguityCrashTest, kindname.method, m2(java.lang.Long,java.lang.Exception...), VarargsAmbiguityCrashTest
1 error
